# wv

./: LICENSE  README.md  wv.cabal
app/: Main.hs
src/: Bigram.hs  Huffman.hs  Lib.hs  Persistence.hs  Train.hs  Vocabulary.hs  Word2Vec.hs
test/: HuffmanSpec.hs  TrainSpec.hs  VocabularySpec.hs  Word2VecSpec.hs
